Use Android logs
Signed-off-by: Jaida Wu <mlgmxyysd@meowcat.org>